--- a/app/src/main/res/layout/fragment_addscheme.xml
+++ b/app/src/main/res/layout/fragment_addscheme.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Update 75LTV Rate"
+                android:text="Base Price"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_marginBottom="8dp" />
@@ -30,7 +30,7 @@
                 android:id="@+id/et_ltv_75rate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter 75LTV Price"
+                android:hint="Enter base LTV"
                 android:inputType="numberDecimal" />
 
             <Button
