--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -1,17 +1,17 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.home_fragment"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".Fragment.home_fragment">
 
+   <!-- Top section (Inputs, Buttons, Net weight, Base price) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="vertical"
-       android:gravity="center_horizontal"
-       android:padding="4dp">
+       android:orientation="vertical">
 
       <!-- Weight Input -->
       <LinearLayout
@@ -63,9 +63,7 @@
                 android:inputType="numberDecimal"
                 android:textColor="@color/text_grey"/>
          </com.google.android.material.textfield.TextInputLayout>
-
       </LinearLayout>
-
 
       <!-- Purity Buttons Grid -->
       <GridLayout
@@ -139,18 +137,54 @@
              android:layout_margin="4dp"/>
       </GridLayout>
 
-      <TextView
-          android:id="@+id/actualweight"
-          android:layout_width="wrap_content"
+      <!-- Net Weight and Base Price -->
+      <LinearLayout
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-         android:padding="10dp"
-         android:layout_margin="5dp"
-         android:text="Net Weight"
-         android:gravity="center"
-         android:textColor="@color/text_red"
-         android:textSize="16sp"
-          android:background="@drawable/round_corner_foucused"
-          android:backgroundTint="@color/gold_yellow"
-         />
+          android:gravity="center">
+
+         <TextView
+             android:id="@+id/actualweight"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:padding="10dp"
+             android:layout_margin="5dp"
+             android:text="Net Weight"
+             android:gravity="center"
+             android:textColor="@color/text_red"
+             android:textSize="16sp"
+             android:background="@drawable/round_corner_foucused"
+             android:backgroundTint="@color/gold_yellow" />
+
+         <TextView
+             android:id="@+id/baseprice"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:padding="10dp"
+             android:layout_margin="5dp"
+             android:text="Base price"
+             android:gravity="center"
+             android:textColor="@color/text_red"
+             android:textSize="16sp"
+             android:background="@drawable/round_corner_foucused"
+             android:backgroundTint="@color/gold_yellow" />
+      </LinearLayout>
    </LinearLayout>
-</ScrollView>
+
+   <!-- Only SchemeContainer Scrollable -->
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1"
+       android:fillViewport="true"
+       android:scrollbars="vertical">
+
+      <LinearLayout
+          android:id="@+id/schemeContainer"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:padding="8dp" />
+   </ScrollView>
+
+</LinearLayout>
