--- a/app/src/main/res/layout/scheme_card.xml
+++ b/app/src/main/res/layout/scheme_card.xml
@@ -1,52 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/schemeCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    card_view:cardCornerRadius="12dp"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginBottom="16dp"
+    card_view:cardCornerRadius="16dp"
     card_view:cardElevation="6dp"
-    android:background="@color/white"
-    android:backgroundTint="@color/gold_yellow">
+    android:background="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:background="@drawable/round_corner_foucused"
+        android:padding="20dp">
 
-        <!-- Scheme Name -->
         <TextView
             android:id="@+id/tvSchemeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Scheme: SL"
+            android:text="Scheme Name"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textColor="@color/text_red" />
 
-        <!-- Loan Amount -->
         <TextView
             android:id="@+id/tvLoanAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Loan Amount: ₹1,20,000"
-            android:textSize="16sp"
-            android:textColor="@color/text_grey" />
+            android:text="Loan Amount: ₹0"
+            android:layout_marginTop="10dp"
+            android:textColor="#444444"
+            android:textSize="16sp" />
 
-        <!-- Monthly Interest -->
         <TextView
             android:id="@+id/tvMonthlyInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Monthly Interest: ₹950"
-            android:textSize="16sp"
-            android:textColor="@color/text_grey" />
-
+            android:text="Monthly Interest: ₹0"
+            android:layout_marginTop="6dp"
+            android:textColor="#666666"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
