safe And productive Gold Loan calci 27 May

--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -27,7 +27,7 @@
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_marginEnd="8dp"
-             android:hint="Enter Weight"
+             android:hint="Enter Weight(G)"
              app:boxBackgroundMode="outline"
              app:boxStrokeColor="@color/gold_yellow"
              app:hintTextColor="@color/gold_yellow"
@@ -48,7 +48,7 @@
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_marginStart="8dp"
-             android:hint="Stone Weight"
+             android:hint="Stone Weight(G)"
              app:boxBackgroundMode="outline"
              app:boxStrokeColor="@color/gold_yellow"
              app:hintTextColor="@color/gold_yellow"
