--- a/app/src/main/res/layout/scheme_card.xml
+++ b/app/src/main/res/layout/scheme_card.xml
@@ -16,6 +16,10 @@
         android:background="@drawable/round_corner_foucused"
         android:padding="20dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tvSchemeName"
             android:layout_width="wrap_content"
@@ -24,6 +28,15 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/text_red" />
+
+        <TextView
+            android:id="@+id/tvInterestRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="intrest rate"
+            android:layout_marginLeft="15dp"/>
+
+    </LinearLayout>
 
         <TextView
             android:id="@+id/tvLoanAmount"
