--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -29,6 +29,7 @@
              android:layout_marginEnd="8dp"
              android:hint="Enter Weight(G)"
              app:boxBackgroundMode="outline"
+             android:elevation="8dp"
              app:boxStrokeColor="@color/gold_yellow"
              app:hintTextColor="@color/gold_yellow"
              app:cursorColor="@color/gold_yellow"
