--- a/app/src/main/res/layout/item_scheme.xml
+++ b/app/src/main/res/layout/item_scheme.xml
@@ -67,13 +67,13 @@
                 android:id="@+id/tvmin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="tvLimits"/>
+                android:text="Min limit"/>
 
             <TextView
                 android:id="@+id/tvmax"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="tvLimits"/>
+                android:text="Max limit"/>
 
             <TextView
                 android:id="@+id/tvInterestYearly"
